--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -26,6 +26,34 @@ body {
     justify-content: center;
 }
 
+.custom-card-img {
+    height: 200px;
+    object-fit: cover;
+}
+
+.card{
+    margin: 1rem;
+    background-color: #313131;
+}
+.btn{
+    margin: 0.5rem;
+}
+
+.card:hover{
+    text-decoration: none;
+    background-color: #1f1f1f;
+    box-shadow: 0 0 10px #E55604;
+}
+
+.card a:hover{
+    text-decoration: none;
+}
+.card-title{
+    color: #E55604;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:x-large;
+}
+
 .logo {
 	display: flex;
 	align-items: center;
