--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Be Vietnam Pro", sans-serif;
     background-color: #EBE4D1;
 }
 
@@ -42,6 +42,8 @@ body {
 
 .card{
     border-radius: 10%;
+    background-color: #ffffff;
+
 }
 
 .card:hover{
@@ -49,6 +51,7 @@ body {
     border-radius: 10%;
     background-color: #f0f0f0;
     box-shadow: 0 0 10px #E55604;
+    cursor: pointer;
 }
 
 .card a:hover{
@@ -56,6 +59,83 @@ body {
 }
 .card-title{
     color: #E55604;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Be Vietnam Pro", sans-serif;
     font-size:x-large;
 }
+
+h4{
+    font-family: "Be Vietnam Pro", sans-serif;
+    color: #E55604;
+    font-size: 2.5rem;
+}
+
+
+.AddButton{
+    border: 0;
+    background-color: #ffffff;
+}
+
+.card:hover .AddButton{
+    background-color: #f0f0f0;
+}
+
+.plusButton {
+    /* Config start */
+    --plus_sideLength: 2.8rem;
+    --plus_topRightTriangleSideLength: 0.9rem;
+    /* Config end */
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid white;
+    width: var(--plus_sideLength);
+    height: var(--plus_sideLength);
+    background-color: #E55604;
+    overflow: hidden;
+  }
+  
+  .plusButton::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    width: 0;
+    height: 0;
+    border-width: 0 var(--plus_topRightTriangleSideLength) var(--plus_topRightTriangleSideLength) 0;
+    border-style: solid;
+    border-color: transparent white transparent transparent;
+    transition-timing-function: ease-in-out;
+    transition-duration: 0.2s;
+  }
+  
+  .plusButton:hover {
+    cursor: pointer;
+  }
+  
+  .plusButton:hover::before {
+    --plus_topRightTriangleSideLength: calc(var(--plus_sideLength) * 2);
+  }
+  
+  .plusButton:focus-visible::before {
+    --plus_topRightTriangleSideLength: calc(var(--plus_sideLength) * 2);
+  }
+  
+  .plusButton>.plusIcon {
+    fill: rgb(255, 255, 255);
+    width: calc(var(--plus_sideLength) * 0.7);
+    height: calc(var(--plus_sideLength) * 0.7);
+    z-index: 1;
+    transition-timing-function: ease-in-out;
+    transition-duration: 0.2s;
+  }
+  
+  .plusButton:hover>.plusIcon {
+    fill: rgb(0, 0, 0);
+    transform: rotate(180deg);
+  }
+  
+  .plusButton:focus-visible>.plusIcon {
+    fill: rgb(0, 0, 0);
+    transform: rotate(180deg);
+  }
